--- a/tracker/templates/login.hbs
+++ b/tracker/templates/login.hbs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <p><label for="username">Username </label><input name="username" id="username" /></p>
-        <p><label for="password">Password </label><input name="password" type="password" id="password" /></p>
-        <p><button>Login</button></p>
-    </form>
-</body>
-</html>
+{{#*inline "page"}}
+<h1>Login</h1>
+<form action="/login" method="post">
+    <p><label for="username">Username </label><input name="username" id="username" /></p>
+    <p><label for="password">Password </label><input name="password" type="password" id="password" /></p>
+    <p><button>Login</button></p>
+</form>
+{{/inline}}
+
+{{> main_layout}}
