--- a/tracker/templates/index.hbs
+++ b/tracker/templates/index.hbs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rusty Tracker</title>
-</head>
-<body>
+{{#*inline "page"}}
 <h1>Hello, World!</h1>
 <a href="/login">Login</a>
-</body>
-</html>
+{{/inline}}
+
+{{> main_layout}}
